--- a/styles.css
+++ b/styles.css
@@ -316,10 +316,6 @@ h2{
 
 
 
-
-
-
-
 .section3 {
     width: 100vw;
     padding: 50px 0;
@@ -379,6 +375,20 @@ h2{
 }
 
 
+
+
+@media (max-width: 1075px) {
+
+    .section3 h2 {
+        margin-bottom: 10px;
+    }
+
+}
+
+
+
+
+
 .section4 {
     width: 100vw;
     height: 200px;
@@ -415,6 +425,11 @@ h2{
     color: #ffffff;
     font-size: 50px;
 }
+
+
+
+
+
 
 .section5 {
     width: 100vw;
@@ -561,6 +576,29 @@ h2{
     max-width: 95%;
     margin:5px;
 }
+
+
+
+@media (max-width: 1075px) {
+   
+    .section5 h2 {
+       margin-bottom: 0px;
+    }
+    
+    .section5 p {
+        margin: 10px 0px;
+        margin-right: 140px;
+    }
+    
+ 
+}
+
+
+
+
+
+
+
 
 .section6 {
     position: relative;
