--- a/styles.css
+++ b/styles.css
@@ -1254,7 +1254,7 @@ h2{
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    overflow: visible;
     text-align: center;
     transition: transform 0.3s;
     height:620px;
@@ -1267,6 +1267,7 @@ h2{
     object-fit: cover;
     min-height: 280px;
     min-width: 100%;
+   border-radius: 10px 10px 0px 0px;
 }
 
 .team-info {
@@ -1311,6 +1312,34 @@ h2{
 .arrow.right {
     right: 10px;
 }
+
+@media (max-width: 1075px) {
+
+    .section-team h2 {
+        margin-bottom: 20px;
+        padding-left: 40px;
+    }
+
+    .team-info {
+        padding: 8px; 
+    }
+
+    .team-info h6 {
+        margin: 8px 0 5px;
+    }
+
+    
+}
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 768px) {
     .team-member {
