--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,14 @@ nav {
     }
 }
 
+/*nav bar is hidden in 480 width*/
+ @media (max-width: 480px) {
+    nav {
+        display: none;
+    }
+} 
+
+
 
 .main-body{
     display:flex;
@@ -206,8 +214,36 @@ nav {
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 480px) {
+    
+    .main-body h1 {
+        font-size: 35px;
+        top:20%;
+        left:8%;
+    }
  
+    .main-body-p{
+        position: absolute;
+        font-size: 17px;
+        top:28%;
+        left:11%;
+        padding:7px 5px;
+    }
+
+    .main-body-des{
+        top:34%;
+        left:11%;
+        width:60%;
+        font-size: 15px;
+    }
+
+    .main-body-btn{
+        top:67%;
+        left:11%;
+        padding:5px 10px;
+        font-size: 15px;
+    }
+
 
 }
 
@@ -1738,7 +1774,7 @@ h2{
 
 
 /* Responsive Styles */
-@media (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 768px) {
     .container {
         flex-direction: column;
         align-items: flex-start;
@@ -1786,6 +1822,7 @@ h2{
     .volunteer-member {
         width: 90%;
     }
+
 }
 
 
@@ -1854,8 +1891,8 @@ h2{
 
 @media (max-width: 480px) {
     .volunteer-member {
-        width: 90%; /* Full width for cards */
-        margin-bottom: 20px; /* Space between cards */
+        width: 90%;         
+        margin-bottom: 20px;
     }
 
     .section9 h2 {
@@ -1994,9 +2031,6 @@ h2{
 
 @media (max-width: 768px) {
  
-
-
-
     .section8 {
         flex-direction: column;
     }
